# tractusx-sdk

./: DEPENDENCIES_TRACTUS-X_SDK  DEPENDENCIES_TRACTUS-X_SDK_WINDOWS  pyproject.toml  versions.json
.github/workflows/: compatibility-test.yaml
docs/api-reference/industry-library/submodel-server/: adapters.md
examples/: README.md
examples/extensions/geometry/: geometry_aspect_validator_example.py
examples/extensions/geometry/exampleData/: child_node.json  empty_node.json  scene.json  scene_with_child.json
main/: 404.html  index.html  objects.inv  versions.json
main/api-reference/: index.html
main/api-reference/dataspace-library/: index.html
main/api-reference/extension-library/: index.html
main/api-reference/industry-library/: index.html
main/assets/images/: logo_tractus-x-min.ico.license  logo_tractus-x.svg.license
main/assets/videos/: tck-demo.mov  tck-demo.mov.license
main/contributing/architectural-decisions/0001-record-architecture-decisions/: index.html
main/contributing/architectural-decisions/0002-data-storage-architecture/: index.html
main/contributing/architectural-decisions/0003-sdk-module-architecture/: index.html
main/contributing/architectural-decisions/0004-tractusx-sdk-services/: index.html
main/contributing/code-of-conduct/: index.html
main/contributing/contribution-guidelines/: index.html
main/contributing/versioning/VERSIONING/: index.html
main/core-concepts/authentication-security/authentication/: index.html
main/core-concepts/dataspace-concepts/: index.html
main/core-concepts/extensions-concepts/: index.html
main/core-concepts/industry-concepts/: index.html
main/core-concepts/sdk-architecture/sdk-structure-and-components/: index.html
main/home/overview/: index.html
main/home/quick-start/: index.html
main/how-to-guides/backward-compatibility/: index.html
main/how-to-guides/ic-hub-use-case/industry-core-hub-overview/: index.html
main/media/: catena-x-speedway-sdk.svg copy.license  modular-microservices-architecture.svg.license
main/overrides/: main.html
main/search/: search_index.json
main/tck/: index.html
main/tck/connector/: index.html
main/tutorials/ai-tensorflow-integration/: index.html
main/tutorials/create-first-asset/: index.html
main/tutorials/getting-started/: index.html
main/tutorials/notification-api/: index.html
tests/industry/adapters/: test_file_system_adapter.py  test_http_submodel_adapter.py  test_submodel_adapter_factory.py
(+36 files in other folders)
