[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tractusx_sdk"
version = "0.7.1"
description = "Eclipse Tractus-X Software Development KIT - The Dataspace & Industry Foundation Middleware"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "annotated-types (>=0.7.0,<0.8.0)",
    "deprecation (>=2.1.0,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "exceptiongroup (>=1.2.0,<2.0.0)",
    "fastapi (>=0.120.3,<0.121.0)",
    "fastapi_cache2 (>=0.2.2,<0.3.0)",
    "fastapi-keycloak-middleware (>=1.1.0,<2.0.0)",
    "jinja2 (>=3.1.4,<4.0.0)",
    "pydantic (>=2.6.3,<3.0.0)",
    "pydantic-core (>=2.16.3,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "python-keycloak (>=4.0.1,<5.0.0)",
    "httpx (>=0.26.0,<0.27.0)",
    "python-multipart (>=0.0.26,<0.1.0)",
    "pyyaml (>=6.0.0,<7.0.0)",
    "requests (>=2.33.0,<3.0.0)",
    "requests-toolbelt (>=1.0.0,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.1.0)",
    "tomli (>=2.0.1,<3.0.0)",
    "typer (>=0.15.0,<0.16.0)",
    "uvicorn (>=0.30.0,<0.35.0)",
    "uvloop (>=0.21.0,<0.22.2); sys_platform == 'linux' or sys_platform == 'darwin'",
    "winloop (>=0.1.8,<0.2.0); sys_platform == 'win32'",
    "filelock (>=3.18.0,<4.0.0)",
    "keycloak (>=3.1.5,<4.0.0)",
    "jsonschema (>=4.0.0,<5.0.0)",
]

[project.urls]
"Homepage" = "https://eclipse-tractusx.github.io/tractusx-sdk/main/"
"Repository" = "https://github.com/eclipse-tractusx/tractusx-sdk"
"Documentation" = "https://eclipse-tractusx.github.io/tractusx-sdk/main/"
"Issues" = "https://github.com/eclipse-tractusx/tractusx-sdk/issues"
"Changelog" = "https://github.com/eclipse-tractusx/tractusx-sdk/blob/main/CHANGELOG.md"

[tool.poetry]
requires-poetry = ">=2.0"

[tool.poetry.group.dev.dependencies]
fastapi-cli = "^0.0.7"
build = "^1.2.2"
setuptools = "^78.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-cov = "^6.0.0"
pytest-asyncio = "^0.15.1"
requests-mock = "^1.12.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.21"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.16.1"
mkdocstrings = {extras = ["python"], version = "^0.30.1"}
mike = "^2.1.3"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
